--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-generate-dto/GenerateDto/bin/*
-generate-dto/GenerateDto/obj/*
-generate-dto/.idea
-generate-dto/.config
+GenerateDto/bin/*
+GenerateDto/obj/*
+.idea
+.config
