--- a/GenerateDto/GenerateDto.csproj
+++ b/GenerateDto/GenerateDto.csproj
@@ -4,10 +4,11 @@
         <OutputType>Exe</OutputType>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>generate-dto</ToolCommandName>
         <PackageOutputPath>./nupkg</PackageOutputPath>
+        <LangVersion>latest</LangVersion>
         <Version>1.0.0-rc1</Version>
     </PropertyGroup>
 
